# nano-snapshot-swarm

./: .dockerignore  AGENTS.md  README.md  derive-authority-pubkey  docker-compose.yml  pyproject.toml  skills-lock.json
.github/: FUNDING.yml
.github/workflows/: build.yml  deploy-status-api.yml
.kilo/plans/: 1776397776276-mighty-forest.md  1776441351358-brave-rocket.md  1776913735828-kind-comet.md  1776926419177-curious-engine.md
dashboard/: index.html
docs/: architecture.md  configuration.md  manual-e2e-validation.md  mirror-leech-mode.md  mirror-swarm-mode.md  producer-guide.md
mirror/: Dockerfile  config.py  dht_discovery.py  libtorrent_session.py  reconcile.py  state.py  watcher.py
producer/: cli.py  publish.py  push_status.py  seeder.py  torrent_create.py  validation_fixture.py
scripts/: daily-snapshot.sh  download-snapshot.sh  nano-mirror-build.sh  nano-seed-status.sh  nano-snapshot-logs.sh  nano-snapshot-restart.sh  nano-snapshot-start.sh  nano-snapshot-status.sh  nano-snapshot-stop.sh  push-snapshot-status.sh
shared/: bep46.py  nano_identity.py
status-api/: Dockerfile  fly.toml  pyproject.toml
status-api/app/: main.py  models.py
status-api/app/templates/: index.html  status_fragment.html
status-api/deploy/fly.io/: README.md
systemd/: nano-seed.service  nano-snapshot.service  nano-status-push.service  nano-status-push.timer
tests/: test_mirror_config.py  test_mirror_reconcile.py  test_mirror_state.py  test_push_status.py  test_shared.py  test_status_api.py  test_validation_fixture.py
