[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-snapshot-status-api"
version = "0.1.0"
description = "Fly.io FastAPI service for Nano snapshot status and .torrent distribution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pynacl>=1.5",
    "pydantic>=2.0",
    "jinja2>=3.0",
]
